# awesome-confluence-mcp

./: .env.example  .gitignore  Dockerfile  LICENSE  MONETIZATION.md  README.md  agent.md  glama.json  pyproject.toml  requirements.txt  server.py
.github/: FUNDING.yml
